styles/index.scss
@import "./vars.scss";
@import "./typography.scss";
@import "./helpers.scss";
@import "./inputs.scss";

body {
  margin: 0px;
  height: 100vh;
}
.leadspace {
  position: relative;

  &__nav {
    &-container {
      position: absolute;
      top: 0px;
      width: 100%;
      min-height: 30px;
    }
    &-menu {
      list-style: none;
      & li {
        padding-right: 15px;
        & a {
          color: #fff;
          &:hover {
            transition: opacity 0.3s ease 0s;
            opacity: 0.7;
          }
        }
      }
    }
  }

  &_background {
    max-height: 400px;
    min-width: 100%;
  }

  &_logo {
    transform: translateY(-50%);
    top: 50%;
    position: absolute;
    & img {
      max-width: 130px;
      background: #fff;
      border-radius: 500px;
      margin-bottom: 25px;
    }
    & i {
      padding-right: 7px;
      font-size: 1.5rem;
    }
  }
}
.intro {
  background: #fff;
  & p {
    padding: 0 33%;
  }
}
.presentation {
  background: #f5f5f5;
  & > div {
    flex: 1 0 50%;
  }
  &_desc {
    &_footer img {
      max-height: 50px;
    }
    & p {
      padding: 0 50px;
    }
  }
  &_demo video {
    max-width: 100%;
    border-radius: 4px;
  }
}
.footer {
  min-height: 60px;
}

